--- a/docs/integrations/app-integrations/confluence.mdx
+++ b/docs/integrations/app-integrations/confluence.mdx
@@ -28,6 +28,8 @@ The required arguments to establish a connection are as follows:
 
 <Tip>
 Please follow [this link](https://docs.searchunify.com/Content/Content-Sources/Atlassian-Jira-Confluence-Authentication-Create-API-Token.htm) to generate the token for accessing the Confluence API.
+
+Using Personal Access Token Note: this method is valid for Jira and Confluence (<7.9) Data center / server editions only! For >7.9, username/password must be used instead of personal access token.
 </Tip>
 
 In order to make use of this handler and connect the Confluence app to MindsDB, the following syntax can be used:
